# package-template

./: README.md  cookiecutter.json  setup.cfg  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.package_name}}/: .Rbuildignore  CHANGELOG.md  DESCRIPTION  LICENSE  NEWS.md  README.md  setup.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/: __init__.py
