[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[tool:pytest]
testpaths = tests/
addopts = -rsxX -l -v --strict

[flake8]
exclude = docs
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
